# backup

./: .gitignore  DOCKERFILE  Dockerfile  MAKEFILE  README.md  alembic.ini  config.yaml  docker-compose.yaml  init-user.sql  ollama_client.py  pyproject.toml  test.py
.docker/: check_db.py
.github/workflow/: ci.yaml
archive/: tetscontainers_utils.py
archive/tests/: test_gemini.py
docker/: check_db.py  entrypoint.sh
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 0fffc8ad901a_add_embedding_status_and_status_detail_.py
src/search_api/: __init__.py  auth.py  create_tables.py  db.py  logger.py  main.py  models.py  tasks.py  vector_utils.py
src/search_api/clients/: embedding_client.py  gemini_embedding_client.py  litellm_embedder.py
src/search_api/models/: __init__.py  resource.py  vector.py
src/search_api/routers/: resource.py  vector.py
src/search_api/schemas/: resource.py  vector.py
tests/: __init__.py  test.py  test_embedding_client.py  test_resiurce_crud.py  test_resource.py
