[project]
name = "search-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincent Sheffer",email = "vincent.sheffer@bluemvmt.com"}
]
readme = "README.md"
requires-python = ">=3.12 <4.0"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "search_api", from = "src"}]


[tool.poetry.group.dev.dependencies]
testcontainers = "^4.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
