[project]
name = "search-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincent Sheffer",email = "vincent.sheffer@bluemvmt.com"}
]
readme = "README.md"
requires-python = ">=3.12 <4.0"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "py-healthcheck (>=1.10.1,<2.0.0)",
    "pyhumps (>=3.8.0,<4.0.0)"
]

[tool.poetry]
name = "search-api"
version = "0.1.0"
description = "Search API for vector-based resource discovery"
authors = ["Vincent Sheffer <vincent.sheffer@bluemvmt.com>"]
packages = [{ include = "search_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = "^2.0"
pydantic = "^2.7"
psycopg2-binary = "^2.9"
pgvector = "^0.2.5"
alembic = "^1.13"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
testcontainers = "^4.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
